; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_masscan-app.c_masscan_app_to_string.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_masscan-app.c_masscan_app_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@masscan_app_to_string.tmp = internal global [64 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ssh\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"http\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"ftp\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"dns-ver\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"snmp\00", align 1
@.str.6 = private unnamed_addr constant [8 x i8] c"nbtstat\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"ssl\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"smb\00", align 1
@.str.9 = private unnamed_addr constant [5 x i8] c"smtp\00", align 1
@.str.10 = private unnamed_addr constant [4 x i8] c"pop\00", align 1
@.str.11 = private unnamed_addr constant [5 x i8] c"imap\00", align 1
@.str.12 = private unnamed_addr constant [11 x i8] c"zeroaccess\00", align 1
@.str.13 = private unnamed_addr constant [5 x i8] c"X509\00", align 1
@.str.14 = private unnamed_addr constant [6 x i8] c"title\00", align 1
@.str.15 = private unnamed_addr constant [5 x i8] c"html\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"ntp\00", align 1
@.str.17 = private unnamed_addr constant [5 x i8] c"vuln\00", align 1
@.str.18 = private unnamed_addr constant [11 x i8] c"heartbleed\00", align 1
@.str.19 = private unnamed_addr constant [12 x i8] c"ticketbleed\00", align 1
@.str.20 = private unnamed_addr constant [4 x i8] c"vnc\00", align 1
@.str.21 = private unnamed_addr constant [5 x i8] c"safe\00", align 1
@.str.22 = private unnamed_addr constant [10 x i8] c"memcached\00", align 1
@.str.23 = private unnamed_addr constant [10 x i8] c"scripting\00", align 1
@.str.24 = private unnamed_addr constant [11 x i8] c"versioning\00", align 1
@.str.25 = private unnamed_addr constant [5 x i8] c"coap\00", align 1
@.str.26 = private unnamed_addr constant [7 x i8] c"telnet\00", align 1
@.str.27 = private unnamed_addr constant [4 x i8] c"rdp\00", align 1
@.str.28 = private unnamed_addr constant [5 x i8] c"(%u)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @masscan_app_to_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %35 [
    i32 146, label %5
    i32 153, label %6
    i32 137, label %7
    i32 136, label %8
    i32 150, label %9
    i32 155, label %10
    i32 156, label %11
    i32 138, label %12
    i32 147, label %13
    i32 135, label %14
    i32 140, label %15
    i32 139, label %16
    i32 144, label %17
    i32 149, label %18
    i32 132, label %19
    i32 128, label %20
    i32 151, label %21
    i32 152, label %22
    i32 145, label %23
    i32 129, label %24
    i32 154, label %25
    i32 133, label %26
    i32 130, label %27
    i32 142, label %28
    i32 148, label %29
    i32 141, label %30
    i32 131, label %31
    i32 157, label %32
    i32 134, label %33
    i32 143, label %34
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %38

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %38

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %38

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %38

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %38

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %38

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %38

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %38

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %38

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %38

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %38

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %38

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %38

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %38

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %38

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %38

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %38

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %38

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %38

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %38

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %38

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %38

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %38

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %38

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %38

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %38

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %38

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %38

33:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %38

34:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %38

35:                                               ; preds = %1
  %36 = load i32, i32* %3, align 4
  %37 = call i32 @sprintf_s(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @masscan_app_to_string.tmp, i64 0, i64 0), i32 64, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.28, i64 0, i64 0), i32 %36)
  store i8* getelementptr inbounds ([64 x i8], [64 x i8]* @masscan_app_to_string.tmp, i64 0, i64 0), i8** %2, align 8
  br label %38

38:                                               ; preds = %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %39 = load i8*, i8** %2, align 8
  ret i8* %39
}

declare dso_local i32 @sprintf_s(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
